# consent-mcp

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260205_0000_001_initial_schema.py  20260208_1003_initial_schema.py
scripts/: prestart.py  start_local.ps1  start_local.sh
src/consent_mcp/: __init__.py  config.py
src/consent_mcp/domain/: __init__.py  auth.py  entities.py  providers.py  repository.py  services.py  value_objects.py
src/consent_mcp/infrastructure/: __init__.py
src/consent_mcp/infrastructure/auth/: __init__.py  api_key.py  factory.py  oauth.py
src/consent_mcp/infrastructure/database/: __init__.py  connection.py  models.py  repository.py
src/consent_mcp/infrastructure/providers/: __init__.py  factory.py  sendgrid.py  twilio.py
src/consent_mcp/mcp/: __init__.py
src/consent_mcp/mcp/v1/: __init__.py  http_server.py  requests.py  responses.py  server.py
src/consent_mcp/utils/: __init__.py  schema_utils.py
src/consent_mcp/web/: __init__.py  app.py
src/consent_mcp/web/routes/v1/: __init__.py  consent.py
src/consent_mcp/web/templates/: consent.py
tests/: conftest.py
tests/domain/: __init__.py  test_entities.py  test_services.py  test_value_objects.py
tests/infrastructure/: test_repository.py  test_sendgrid.py  test_twilio.py
tests/utils/: test_schema_utils.py
tests/web/: __init__.py  test_consent_endpoints.py
